# agentus

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  claude-progress.txt
crates/agentus-cli/: Cargo.toml
crates/agentus-cli/src/: main.rs
crates/agentus-codegen/: Cargo.toml
crates/agentus-codegen/src/: compiler.rs
crates/agentus-codegen/tests/: end_to_end.rs
crates/agentus-common/: Cargo.toml
crates/agentus-common/src/: errors.rs  lib.rs  span.rs
crates/agentus-ir/: Cargo.toml
crates/agentus-ir/src/: instruction.rs  lib.rs  module.rs  opcode.rs
crates/agentus-lexer/: Cargo.toml
crates/agentus-lexer/src/: lexer.rs  token.rs
crates/agentus-parser/: Cargo.toml
crates/agentus-parser/src/: ast.rs  parser.rs
crates/agentus-runtime/: Cargo.toml
crates/agentus-runtime/src/: host.rs  lib.rs  value.rs  vm.rs
crates/agentus-sema/: Cargo.toml
crates/agentus-sema/src/: resolver.rs
docs/: architecture.md  dev-workflow.md
examples/: agent_basic.ags  arithmetic.ags  collections.ags  control_flow.ags  error_handling.ags  for_loop.ags  functions.ags  hello.ags  interpolation.ags  multi_agent.ags  tools.ags  while_loop.ags
spec/: feature-checklist.md
