[package]
name = "agentus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentus-common.workspace = true
agentus-lexer.workspace = true
agentus-parser.workspace = true
agentus-sema.workspace = true
agentus-ir.workspace = true
agentus-codegen.workspace = true
agentus-runtime.workspace = true
