[package]
name = "agentus-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentus-common.workspace = true
agentus-parser.workspace = true
agentus-ir.workspace = true
agentus-sema.workspace = true

[dev-dependencies]
agentus-runtime.workspace = true
